--- a/data/css/style.css
+++ b/data/css/style.css
@@ -57,3 +57,13 @@ img.no-resize {
         margin: auto;
     }
 }
+
+.logo {
+    font-weight: 600;
+    letter-spacing: 10px;
+}
+
+.logo_desc {
+    font-weight: 300;
+    letter-spacing: 10px;
+}
