--- a/data/css/style.css
+++ b/data/css/style.css
@@ -61,10 +61,16 @@ img.no-resize {
 .logo {
     font-weight: 600;
     letter-spacing: 1px;
+    text-transform: uppercase;
+    margin-bottom: 0;
 }
 
 .logo_desc {
+    margin-top: 0;
     font-weight: 300;
     letter-spacing: 3px;
-    font-size: 18px;
+    font-size: 15px;
+    text-transform: uppercase;
 }
+
+.
