--- a/data/css/style.css
+++ b/data/css/style.css
@@ -73,4 +73,22 @@ img.no-resize {
     text-transform: uppercase;
 }
 
-.
+.home-wallpaper {
+    width: 100%;
+    height: 100%;
+    border: 1px solid #eee;
+}
+
+.home-heading {
+    margin-top: 30px;
+    width: 100%;
+    text-align: center;
+}
+
+.home-heading h3 {
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 25px;
+    margin-bottom: 30px;
+}
