--- a/data/css/style.css
+++ b/data/css/style.css
@@ -60,16 +60,18 @@ img.no-resize {
 
 .logo {
     font-weight: 600;
-    letter-spacing: 1px;
+    letter-spacing: 3px;
+    font-size: 22px;
     text-transform: uppercase;
     margin-bottom: 0;
+    margin-top: 5px;
 }
 
 .logo_desc {
     margin-top: 0;
     font-weight: 300;
     letter-spacing: 3px;
-    font-size: 15px;
+    font-size: 12px;
     text-transform: uppercase;
 }
 
